--- a/assets/css/skins/reverse.css
+++ b/assets/css/skins/reverse.css
@@ -9,7 +9,7 @@ body.skin-reverse.sidebar-mini .main-sidebar .sidebar-menu li.active > a {
 body.skin-reverse.sidebar-mini .main-sidebar .sidebar-menu li.active ul.dropdown-menu li a,
 body.skin-reverse.sidebar-mini .main-sidebar .sidebar-menu li ul.dropdown-menu li a {
   background-color: transparent;
-  color: #868e96;
+  color: #5d6c7b;
 }
 body.skin-reverse.sidebar-mini .main-sidebar .sidebar-menu li.active ul.dropdown-menu li a:hover,
 body.skin-reverse.sidebar-mini .main-sidebar .sidebar-menu li ul.dropdown-menu li a:hover {
